...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Transactions" prompt="Swipe rows to the left to edit/delete" id="xlE-na-Nb6">
                        <barButtonItem key="leftBarButtonItem" title="Edit" id="Qiy-Eb-gsO">
                            <connections>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Add" id="r97-35-sOX">
                            <connections>
                                <action selector="addItemPressed:" destination="WZa-R5-Lfd" id="4Uc-pR-jEY"/>
...
        <scene sceneID="E8A-gL-JoH">
            <objects>
                <viewController storyboardIdentifier="NewTransactionViewController" title="New Transaction" useStoryboardIdentifierAsRestorationIdentifier="YES" id="HfB-sW-WYd" customClass="NewTransactionViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="ByJ-vB-YPX"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="zVb-X5-i16">
                                <rect key="frame" x="15" y="35" width="207" height="30"/>
                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="$0.00" borderStyle="roundedRect" placeholder="Total" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Mpm-CS-v2A">
                                <rect key="frame" x="233" y="35" width="127" height="30"/>
                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
...
                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                <fontDescription key="fontDescription" name="SFCompactDisplay-Semibold" family="SF Compact Display" pointSize="17"/>
                                <state key="normal" title="Add Payer">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
        <scene sceneID="Pcj-ux-RiU">
            <objects>
                <viewController storyboardIdentifier="AddPayerViewController" title="New Payer" useStoryboardIdentifierAsRestorationIdentifier="YES" id="i5p-09-hC7" customClass="AddPayerViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="jYb-jX-FC0"/>
...
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="$0.00" borderStyle="roundedRect" placeholder="Paid" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="tjq-dJ-ltx">
                                <rect key="frame" x="232" y="83" width="127" height="30"/>
                                <color key="backgroundColor" red="0.92538958790000003" green="0.92554813619999998" blue="0.92537957429999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" name="SFCompactDisplay-Semibold" family="SF Compact Display" pointSize="17"/>
                                <state key="normal" title="Import from Contacts">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
