...

- (void)viewDidLoad {
    [super viewDidLoad];
    
    storyboard = [UIStoryboard storyboardWithName:storyboardName bundle: nil];
    
    self.tableView.accessibilityLabel = @"Transactions Table";
    
    self.title = @"Transactions";
    [self initializeFetchedResultsController];
    [self updateDeleteButtonTitle];
}

...
